...
        <Button
          mode="primary"
          onPress={updateColumn}
          disabled={isLoading}
          style={sharedStyles.mt}
        >
          Save Column
        </Button>
      </Card>
    </ScrollView>
  );
}

...
        }
        keyExtractor={field => field.id}
        labelExtractor={field => field.attributes.name}
        style={sharedStyles.mt}
      />
      <DropdownField
        fieldLabel="Group Direction"
        emptyLabel="(choose)"
        options={sortDirectionOptions}
        value={sortDirectionOptions.find(
          direction => direction.key === attributes['card-grouping']?.direction,
        )}
        onValueChange={direction =>
...
