...
        <div style={styles.boardCard}>
          <BoardIcon
            name={board.attributes['icon-extended']}
            style={sharedStyles.mr}
            sx={{color: primaryColor}}
          />
          <Text size={3}>{board.attributes.name ?? '(unnamed board)'}</Text>
        </div>
      </Card>
      <div style={styles.favoriteContainer}>
        <FavoriteButton board={board} />
      </div>
    </div>
...
